--- a/day1.ipynb
+++ b/day1.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 1\n",
+    "Input is a list of numbers and task is to the count of numbers in the list which is larger than its predeccessor."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -16,13 +24,12 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "with open('input_day1.txt') as file:\n",
-    "    contents = file.read().splitlines()\n",
+    "with open('input_day1.txt', 'r') as file:\n",
+    "    contents = file.readlines()\n",
     "\n",
     "input =[]\n",
     "for c in contents:\n",
     "    input.append(int(c))\n",
-    "\n",
     "\n",
     "## Part 1\n",
     "# Find amount of values which is larger than the previous\n",
@@ -39,6 +46,14 @@
     "\n",
     "print('Part 1: ' + str(count_larger_values(input)))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 2\n",
+    "For task 2 we compare the sum of the values in a sliding window of three values, so the first window being value 1 through value 3, the 2nd value 2 through value 4 and so on."
    ]
   },
   {
@@ -64,13 +79,6 @@
     "\n",
     "print('Part 2: ' + str(count_larger_values(windows)))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
